# Snake_Game_SDL2

./: CMakeLists.txt  main.cpp
game_engine/: GameEngine.cpp  GameEngine.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  SimpleAI.cpp  SimpleAI.h  Snake.cpp  Snake.h
renderer/: Color.cpp  Color.h  ConsoleRenderer.cpp  ConsoleRenderer.h  Renderer.h  SDL2Renderer.cpp  SDL2Renderer.h
